+  add dockerfile for linux-amd64, linux-win32, linux-win64
+  Improved download speeds (thanks to https://github.com/rursache)
+  Improved robustness of TitleID parsing (thanks to https://github.com/rursache)
+  Added option to bypass ssl checks to help with connection issues (thanks to https://github.com/rursache)


v012:
+  added european spanish translation thanks to https://github.com/IlDucci
+  improved sha1 verification of downloaded PKGs
-  remove github formatting characters from changelog
+  various build improvements including:
      +validate & minify json files for slightly smaller releases
      -disabled UPX for non windows platforms since that sometimes leads to corrupted binaries
      +name release archives for python version they were built on e.g. "PS3GameUpdateDownloader-v011-CPython3.11.1final-win64.zip"
      +(Linux Only)name release archives for the c libary & version they were built on e.g. "PS3GameUpdateDownloader-v011-CPython3.11.1final-glibc2.31-linux64.zip"
+  save git commit id at buildtime and show it in the main window
!  proper handling of sonys weak certificate
+  faster search for new titledb versions
!  add GPL3 license to this project
-  fix update searching for games with no ps3_system_ver set like BCUS98132

v011:
-  fix crash when proxy is enabled but no proper proxy settings are set
-  fix typo in download speed display
+  moved proxy user to keyring
-  fixed proxy support not being installed from requirements.txt
-  added two japanese psn titleid to titledb
+  added updater for titledb
+  added download verification to auto updater
-  prevent crashes with corrupted config files
+  changed storage treshold from percentage to absolute

v010:
-  fix a crash when checking updates
+  add info about the ps3 store shutdown

v009:
+  update turkish translation
+  use UPX for builds to produce smaller binaries and hopefully slightly less antivirus false positives
+  added an icon to the executable and the windows