@@ -4,3 +4,4 @@ keyring==24.3.0
 requests[socks]==2.31.0
 setuptools==69.0.3
 psutil==5.9.8
+pyyaml==6.0.1
